fix header brand off positioned on smaller pages

--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -19,6 +19,9 @@
 		text-align: center;
 		vertical-align: middle;
 	}
+	.brand {
+		border: 2px solid transparent;
+	}
 	.nav-items {
 		display: flex;
 		.nav-active {
